--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
     branches: [main]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+  
 env:
   DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/iso20022-console-log
   DOCKER_TAG: ${{ github.sha }}
