--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,29 +79,27 @@ jobs:
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
     
     steps:
-      - name: Deploy to Railway using API
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Install Railway CLI
         run: |
-          # Mettre à jour la variable d'environnement IMAGE
-          curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.RAILWAY_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "query": "mutation($input: VariableInput!) { upsertVariable(input: $input) { id } }",
-              "variables": {
-                "input": {
-                  "environmentId": "'${{ secrets.RAILWAY_ENVIRONMENT_ID }}'",
-                  "name": "IMAGE",
-                  "projectId": "'${{ secrets.RAILWAY_PROJECT_ID }}'",
-                  "serviceId": "'${{ secrets.RAILWAY_SERVICE_ID }}'",
-                  "value": "'${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}'"
-                }
-              }
-            }' \
-            https://backboard.railway.app/graphql/v1
+          curl -fsSL https://cli.railway.app/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
           
-          # Déclencher le redéploiement
-          curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.RAILWAY_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{"environmentId": "'${{ secrets.RAILWAY_ENVIRONMENT_ID }}'"}' \
-            "https://backboard.railway.app/api/v1/services/${{ secrets.RAILWAY_SERVICE_ID }}/deployments"
+      - name: Login to Railway
+        run: railway login --token ${{ secrets.RAILWAY_TOKEN }}
+        
+      - name: Link to Railway project
+        run: railway link ${{ secrets.RAILWAY_PROJECT_ID }}
+        
+      - name: Set environment variables
+        run: |
+          railway variables set IMAGE=${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }} \
+            SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} \
+            SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }} \
+            SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} \
+            SPRING_PROFILES_ACTIVE=prod
+            
+      - name: Deploy to Railway
+        run: railway up --service ${{ secrets.RAILWAY_SERVICE_ID }} --detach
