--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,8 @@ jobs:
           echo "$(npm root -g)/@railway/cli/bin" >> $GITHUB_PATH
           
       - name: Login to Railway
-        run: railway login --token ${{ secrets.RAILWAY_TOKEN }}
+        run: |
+          echo "${{ secrets.RAILWAY_TOKEN }}" | railway login
         
       - name: Set environment variables
         run: |
