--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,17 +83,20 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Install Railway CLI
-        run: |
-          npm install -g @railway/cli
-          echo "$(npm root -g)/@railway/cli/bin" >> $GITHUB_PATH
+        run: npm install -g @railway/cli
           
-      - name: Login to Railway
+      - name: Setup Railway environment
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
-          echo "${{ secrets.RAILWAY_TOKEN }}" | railway login
+          echo "RAILWAY_TOKEN=${RAILWAY_TOKEN}" >> $GITHUB_ENV
         
       - name: Set environment variables
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_PROJECT: ${{ secrets.RAILWAY_PROJECT_ID }}
         run: |
-          railway variables set \
+          npx railway variables set \
             IMAGE=${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }} \
             SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} \
             SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }} \
@@ -101,5 +104,8 @@ jobs:
             SPRING_PROFILES_ACTIVE=prod
             
       - name: Deploy to Railway
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_PROJECT: ${{ secrets.RAILWAY_PROJECT_ID }}
         run: |
-          railway up --service ${{ secrets.RAILWAY_SERVICE_ID }} --detach
+          npx railway up --detach
