fix: update railway variables command to use 'add' instead of 'set'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,28 +84,28 @@ jobs:
         
       - name: Install Railway CLI
         run: npm install -g @railway/cli
-          
+      
       - name: Setup Railway environment
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        run: |
-          echo "RAILWAY_TOKEN=${RAILWAY_TOKEN}" >> $GITHUB_ENV
-        
+        run: echo "RAILWAY_TOKEN=${RAILWAY_TOKEN}" >> $GITHUB_ENV
+
       - name: Set environment variables
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT: ${{ secrets.RAILWAY_PROJECT_ID }}
+          RAILWAY_SERVICE: ${{ secrets.RAILWAY_SERVICE_ID }}
         run: |
-          # Set each variable individually
-          npx railway variables add IMAGE ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
-          npx railway variables add SPRING_DATASOURCE_URL "${{ secrets.SPRING_DATASOURCE_URL }}"
-          npx railway variables add SPRING_DATASOURCE_USERNAME "${{ secrets.SPRING_DATASOURCE_USERNAME }}"
-          npx railway variables add SPRING_DATASOURCE_PASSWORD "${{ secrets.SPRING_DATASOURCE_PASSWORD }}"
-          npx railway variables add SPRING_PROFILES_ACTIVE prod
-            
+          # Remplace `add` par `set`
+          npx railway variables set IMAGE ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }} --service $RAILWAY_SERVICE
+          npx railway variables set SPRING_DATASOURCE_URL "${{ secrets.SPRING_DATASOURCE_URL }}" --service $RAILWAY_SERVICE
+          npx railway variables set SPRING_DATASOURCE_USERNAME "${{ secrets.SPRING_DATASOURCE_USERNAME }}" --service $RAILWAY_SERVICE
+          npx railway variables set SPRING_DATASOURCE_PASSWORD "${{ secrets.SPRING_DATASOURCE_PASSWORD }}" --service $RAILWAY_SERVICE
+          npx railway variables set SPRING_PROFILES_ACTIVE prod --service $RAILWAY_SERVICE
+
       - name: Deploy to Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT: ${{ secrets.RAILWAY_PROJECT_ID }}
-        run: |
-          npx railway up --detach
+          RAILWAY_SERVICE: ${{ secrets.RAILWAY_SERVICE_ID }}
+        run: npx railway up --service $RAILWAY_SERVICE --detach
