refactor: improve Railway authentication and linking
- Create Railway config file manually
- Combine setup and linking into a single step
- Use npx for railway commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,15 +88,20 @@ jobs:
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           railway --version
       
-      - name: Setup Railway environment
+      - name: Setup and link Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+          RAILWAY_SERVICE_ID: ${{ secrets.RAILWAY_SERVICE_ID }}
         run: |
-          echo "RAILWAY_TOKEN=$RAILWAY_TOKEN" >> $GITHUB_ENV
-          echo "$HOME/.railway" >> $GITHUB_PATH
-        
-      - name: Link Railway project
-        run: railway link --project ${{ secrets.RAILWAY_PROJECT_ID }} --service ${{ secrets.RAILWAY_SERVICE_ID }}
+          # Create Railway config directory
+          mkdir -p ~/.railway
+          
+          # Create config file with token
+          echo "{"token":"$RAILWAY_TOKEN"}" > ~/.railway/config.json
+          
+          # Link project and service
+          npx railway link --project $RAILWAY_PROJECT_ID --service $RAILWAY_SERVICE_ID
 
       - name: Set environment variables
         env:
