refactor: switch to Railway API for deployment
- Replace CLI-based deployment with direct API calls
- Add proper environment variable management via GraphQL
- Split into two clear steps: variable updates and deployment trigger
- Add better error handling and logging
- Use Railway's native environment variable management

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,26 +73,54 @@ jobs:
           cache-to: type=gha,mode=max
 
   deploy-to-railway:
-    name: Deploy to Railway
+    name: Deploy to Railway via API
     needs: build-and-push-docker
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: |
-          curl -fsSL https://railway.app/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-          railway --version
-
-      - name: Deploy Docker image to Railway
+      - name: Set environment variables for Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-          RAILWAY_SERVICE: ${{ secrets.RAILWAY_SERVICE_ID }}
-          DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
-          DOCKER_TAG: ${{ env.DOCKER_TAG }}
+          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+          RAILWAY_SERVICE_ID: ${{ secrets.RAILWAY_SERVICE_ID }}
         run: |
-          railway up --service $RAILWAY_SERVICE --detach -- --image $DOCKER_IMAGE:$DOCKER_TAG
+          # Tableau des variables à mettre à jour
+          declare -A RAILWAY_VARS
+          RAILWAY_VARS[IMAGE]="${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}"
+          RAILWAY_VARS[SPRING_DATASOURCE_URL]="${{ secrets.SPRING_DATASOURCE_URL }}"
+          RAILWAY_VARS[SPRING_DATASOURCE_USERNAME]="${{ secrets.SPRING_DATASOURCE_USERNAME }}"
+          RAILWAY_VARS[SPRING_DATASOURCE_PASSWORD]="${{ secrets.SPRING_DATASOURCE_PASSWORD }}"
+          RAILWAY_VARS[SPRING_PROFILES_ACTIVE]="prod"
+
+          # Mettre à jour chaque variable via l'API GraphQL Railway
+          for VAR_NAME in "${!RAILWAY_VARS[@]}"; do
+            VAR_VALUE=${RAILWAY_VARS[$VAR_NAME]}
+            echo "🔹 Setting $VAR_NAME on Railway..."
+            curl -s -X POST \
+              -H "Authorization: Bearer $RAILWAY_TOKEN" \
+              -H "Content-Type: application/json" \
+              -d '{
+                "query": "mutation($input: VariableInput!) { upsertVariable(input: $input) { id } }",
+                "variables": {
+                  "input": {
+                    "environmentId": "'${{ secrets.RAILWAY_ENVIRONMENT_ID }}'",
+                    "name": "'"$VAR_NAME"'",
+                    "projectId": "'$RAILWAY_PROJECT_ID'",
+                    "serviceId": "'$RAILWAY_SERVICE_ID'",
+                    "value": "'"$VAR_VALUE"'"
+                  }
+                }
+              }' \
+              https://backboard.railway.app/graphql/v1
+          done
+
+      - name: Trigger Railway deployment
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_SERVICE_ID: ${{ secrets.RAILWAY_SERVICE_ID }}
+        run: |
+          echo "🔹 Triggering deployment on Railway..."
+          curl -s -X POST \
+            -H "Authorization: Bearer $RAILWAY_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d '{"environmentId": "'${{ secrets.RAILWAY_ENVIRONMENT_ID }}'"}' \
+            "https://backboard.railway.app/api/v1/services/$RAILWAY_SERVICE_ID/deployments"
