--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,8 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "java -jar target/*.jar --spring.profiles.active=prod"
+# Attendre que la DB Railway soit prête
+startCommand = "./wait-for-it.sh $PGHOST:$PGPORT -- java -jar target/*.jar --spring.profiles.active=prod"
 
 [environment]
 NODE_ENV = "production"
