--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,24 +72,11 @@ jobs:
     runs-on: ubuntu-latest
     container: ghcr.io/railwayapp/cli:latest
     env:
-      IMAGE: ghcr.io/${{ github.repository_owner }}/iso20022-console-log:${{ github.sha }}
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-      SVC_ID: ${{ secrets.RAILWAY_SERVICE_ID }} # ton service Railway
-      SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
-      SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
-      SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
-      SPRING_PROFILES_ACTIVE: prod
+      SVC_ID: ${{ secrets.RAILWAY_SERVICE_ID }}
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set Railway environment variables
-        run: |
-          railway variables set IMAGE=$IMAGE --service $SVC_ID
-          railway variables set SPRING_DATASOURCE_URL=$SPRING_DATASOURCE_URL --service $SVC_ID
-          railway variables set SPRING_DATASOURCE_USERNAME=$SPRING_DATASOURCE_USERNAME --service $SVC_ID
-          railway variables set SPRING_DATASOURCE_PASSWORD=$SPRING_DATASOURCE_PASSWORD --service $SVC_ID
-          railway variables set SPRING_PROFILES_ACTIVE=$SPRING_PROFILES_ACTIVE --service $SVC_ID
 
       - name: Deploy to Railway
         run: railway up --service=$SVC_ID --detach
