refactor: simplify deployment configuration
- Removed wait-for-it.sh and its references
- Updated railway.toml with direct Java command
- Kept health check configurations for monitoring
- Reverted Dockerfile to its original state

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 
 [deploy]
 # Attendre que la DB Railway soit prête
-startCommand = "./wait-for-it.sh $PGHOST:$PGPORT -- java -jar target/*.jar --spring.profiles.active=prod"
+startCommand = "java -jar target/*.jar --spring.profiles.active=prod"
 
 [environment]
 NODE_ENV = "production"
