refactor: utiliser Maven pour exécuter l'application
- Remplacement de la commande Java par mvn spring-boot:run
- Activation du profil prod via la ligne de commande
- Suppression de l'étape de build manuel inutile

--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-# Attendre que la DB Railway soit prête
-startCommand = "java -jar target/*.jar --spring.profiles.active=prod"
+startCommand = "mvn spring-boot:run -Dspring-boot.run.profiles=prod"
 
 [environment]
 NODE_ENV = "production"
