refactor: mise à jour de la configuration Docker pour Maven
- Utilisation d'une image Maven complète pour l'exécution
- Configuration de CMD pour exécuter l'application avec Maven
- Nettoyage de la configuration Railway
- Amélioration de la structure du Dockerfile

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "mvn spring-boot:run -Dspring-boot.run.profiles=prod"
+# Utilisation de la commande par défaut du conteneur
 
 [environment]
 NODE_ENV = "production"
