revert: retour à l'exécution du JAR
- Retour à une configuration plus simple avec exécution directe du JAR
- Utilisation d'une image JRE plus légère pour l'exécution
- Simplification de la configuration Railway
- Suppression des dépendances inutiles

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-# Utilisation de la commande par défaut du conteneur
+startCommand = "java -jar app.jar --spring.profiles.active=prod"
 
 [environment]
 NODE_ENV = "production"
