feat: amélioration de l'affichage des URLs de démarrage
- Ajout d'un affichage dynamique des URLs en fonction de l'environnement
- Configuration des propriétés personnalisées pour les chemins d'API
- Gestion conditionnelle de la console H2 en mode développement
- Amélioration de la lisibilité du message de démarrage
- Correction des problèmes de compatibilité Java 11

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,16 @@
 # Profil de production avec PostgreSQL
+server:
+  servlet:
+    context-path: /
+  forward-headers-strategy: framework
+
+app:
+  base-url: ${RAILWAY_PUBLIC_DOMAIN:http://localhost:8080}
+  api-docs: /v3/api-docs
+  swagger-ui: /swagger-ui.html
+  actuator: /actuator
+  h2-console: /h2-console
+
 spring:
   datasource:
     url: ${SPRING_DATASOURCE_URL}
