--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,10 @@ spring:
       write-dates-as-timestamps: false
       indent-output: true
     default-property-inclusion: non_null
+    
+  # Désactivation de la sécurité Spring Security
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
 
 # Configuration du serveur
 server:
