--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,7 +5,7 @@ server:
   forward-headers-strategy: framework
 
 app:
-  base-url: ${RAILWAY_PUBLIC_DOMAIN:http://localhost:8080}
+  base-url: ${RAILWAY_PUBLIC_DOMAIN}
   api-docs: /v3/api-docs
   swagger-ui: /swagger-ui.html
   actuator: /actuator
